Ajustes no banco de dados, imagem do evento aparecendo no início e javascript do inicio e informações do evento atualizadas, ambos aparecem o evento